--- a/index.html
+++ b/index.html
@@ -1,79 +1,153 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hi">
 <head>
 <meta charset="UTF-8">
 <title>Free Recharge Demo</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 body{
+    margin:0;
     font-family: Arial, sans-serif;
-    background: linear-gradient(to right,#00c6ff,#0072ff);
-    color:#fff;
-    text-align:center;
-    padding:20px;
+    background:#f4f6f8;
 }
-.box{
-    background:#ffffff;
-    color:#000;
+header{
+    background:#ffc107;
+    padding:15px;
+    font-size:22px;
+    font-weight:bold;
+}
+.container{
+    padding:15px;
+}
+.card{
+    background:#fff;
+    padding:15px;
     border-radius:10px;
-    padding:20px;
-    max-width:350px;
-    margin:auto;
+    margin-bottom:15px;
 }
-input, select, button{
+button{
+    width:100%;
+    padding:12px;
+    font-size:16px;
+    border:none;
+    border-radius:6px;
+    background:#0d6efd;
+    color:#fff;
+}
+input, select{
     width:100%;
     padding:10px;
     margin-top:10px;
-    border-radius:5px;
-    border:none;
 }
-button{
-    background:#0072ff;
-    color:#fff;
-    font-size:16px;
+.hidden{display:none;}
+.live{
+    font-size:14px;
+    color:green;
+    animation: blink 1s infinite;
 }
-.note{
+@keyframes blink{
+    50%{opacity:0.4;}
+}
+.success{
+    text-align:center;
+    font-size:18px;
+    color:green;
+    animation: fade 1s infinite alternate;
+}
+@keyframes fade{
+    from{opacity:0.3;}
+    to{opacity:1;}
+}
+.disclaimer{
     font-size:12px;
     color:red;
-    margin-top:10px;
+    text-align:center;
 }
 </style>
 </head>
+
 <body>
 
-<h2>📱 Free Mobile Recharge</h2>
+<!-- PAGE 1 -->
+<div id="page1">
+<header>Free-Cash-With-Recharge-Earn</header>
+<div class="container">
+<div class="card">
+<p>No investment • No Deposit • Daily Free Time Earn</p>
+<button onclick="openRecharge()">📱 Free Mobile Recharge</button>
+</div>
+</div>
+</div>
 
-<div class="box">
-    <input type="tel" placeholder="Enter Mobile Number" maxlength="10">
+<!-- PAGE 2 -->
+<div id="page2" class="hidden">
+<header>📱 Free Mobile Recharge</header>
+<div class="container">
 
-    <select>
-        <option>Select Operator</option>
-        <option>Jio</option>
-        <option>Airtel</option>
-        <option>VI</option>
-        <option>BSNL</option>
-    </select>
+<div class="card">
+<input type="tel" placeholder="मोबाइल नंबर डालें" maxlength="10">
+<select>
+<option>Jio</option>
+</select>
 
-    <select>
-        <option>Select Amount</option>
-        <option>₹10</option>
-        <option>₹20</option>
-        <option>₹50</option>
-        <option>₹100</option>
-    </select>
+<select id="plan">
+<option value="">Recharge Plan चुनें</option>
+<option>₹19 – 1GB – 1 दिन</option>
+<option>₹29 – 2GB – 1 दिन</option>
+<option>₹149 – 1.5GB/Day – 24 दिन</option>
+<option>₹239 – 1.5GB/Day – 28 दिन</option>
+<option>₹299 – 2GB/Day – 28 दिन</option>
+</select>
 
-    <button onclick="demo()">Recharge Now</button>
+<button onclick="doRecharge()">Recharge Now</button>
+</div>
 
-    <p class="note">
-        ⚠️ This is a demo website only.<br>
-        No real recharge is provided.
-    </p>
+<div class="card">
+<b>🔴 Live Recharge Activity</b>
+<div id="live" class="live"></div>
+</div>
+
+<p class="disclaimer">
+⚠️ यह केवल DEMO वेबसाइट है।  
+कोई असली रिचार्ज नहीं किया जाता।
+</p>
+
+</div>
+</div>
+
+<!-- SUCCESS -->
+<div id="success" class="hidden container">
+<div class="card success">
+✅ Your recharge successfully completed  
+<br>⏳ Please wait 5 minutes...
+</div>
 </div>
 
 <script>
-function demo(){
-    alert("❌ Demo Only!\nNo real recharge will be done.");
+function openRecharge(){
+    document.getElementById("page1").classList.add("hidden");
+    document.getElementById("page2").classList.remove("hidden");
 }
+
+function doRecharge(){
+    document.getElementById("page2").classList.add("hidden");
+    document.getElementById("success").classList.remove("hidden");
+    setTimeout(()=>{
+        alert("SMS: Your Recharge Successfully Completed");
+    },2000);
+}
+
+let numbers=[
+"98****3210 ₹149 सफल",
+"87****4456 ₹239 सफल",
+"76****9988 ₹19 सफल",
+"91****2234 ₹299 सफल"
+];
+let i=0;
+setInterval(()=>{
+    document.getElementById("live").innerText = numbers[i];
+    i=(i+1)%numbers.length;
+},2000);
 </script>
 
 </body>
