--- a/index.html
+++ b/index.html
@@ -2,151 +2,235 @@
 <html lang="hi">
 <head>
 <meta charset="UTF-8">
-<title>Free Recharge Demo</title>
+<title>Free-Cash-With-Recharge-Earn</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-body{
-    margin:0;
-    font-family: Arial, sans-serif;
-    background:#f4f6f8;
+*{box-sizing:border-box;font-family:Arial, sans-serif}
+body{margin:0;background:#f1f1f1}
+
+/* HEADER */
+.top{
+background:#ffcc00;
+padding:12px;
+font-size:18px;
+font-weight:bold;
 }
-header{
-    background:#ffc107;
-    padding:15px;
-    font-size:22px;
-    font-weight:bold;
+.sub{
+font-size:12px;
+font-weight:normal;
 }
-.container{
-    padding:15px;
+
+/* WITHDRAW BOX */
+.withdraw{
+background:#ffd84d;
+margin:10px;
+border-radius:10px;
+padding:12px;
 }
+.amount{
+font-size:26px;
+font-weight:bold;
+}
+
+/* TABS */
+.tabs{
+display:flex;
+margin-top:10px;
+}
+.tab{
+flex:1;
+text-align:center;
+padding:8px;
+background:#fff;
+border-radius:6px;
+margin-right:5px;
+font-size:13px;
+}
+.tab.active{
+background:#0d6efd;
+color:#fff;
+}
+
+/* CARD */
 .card{
-    background:#fff;
-    padding:15px;
-    border-radius:10px;
-    margin-bottom:15px;
+background:#fff;
+margin:10px;
+border-radius:10px;
+padding:12px;
 }
+
+/* BUTTON GRID */
+.grid{
+display:grid;
+grid-template-columns:repeat(3,1fr);
+gap:8px;
+margin-top:10px;
+}
+.grid div{
+background:#e9ecef;
+padding:10px;
+text-align:center;
+border-radius:6px;
+font-weight:bold;
+}
+
+/* BUTTON */
 button{
-    width:100%;
-    padding:12px;
-    font-size:16px;
-    border:none;
-    border-radius:6px;
-    background:#0d6efd;
-    color:#fff;
+width:100%;
+padding:12px;
+border:none;
+border-radius:6px;
+background:#0d6efd;
+color:#fff;
+font-size:16px;
+margin-top:10px;
 }
-input, select{
-    width:100%;
-    padding:10px;
-    margin-top:10px;
-}
-.hidden{display:none;}
+
+/* HIDE */
+.hidden{display:none}
+
+/* LIVE */
 .live{
-    font-size:14px;
-    color:green;
-    animation: blink 1s infinite;
+color:green;
+font-size:13px;
+animation:blink 1s infinite;
 }
-@keyframes blink{
-    50%{opacity:0.4;}
-}
+@keyframes blink{50%{opacity:.4}}
+
+/* SUCCESS */
 .success{
-    text-align:center;
-    font-size:18px;
-    color:green;
-    animation: fade 1s infinite alternate;
+font-size:18px;
+color:green;
+text-align:center;
+animation:fade 1s infinite alternate;
 }
-@keyframes fade{
-    from{opacity:0.3;}
-    to{opacity:1;}
+@keyframes fade{from{opacity:.4}to{opacity:1}}
+
+/* BOTTOM NAV */
+.nav{
+position:fixed;
+bottom:0;
+left:0;
+right:0;
+background:#fff;
+display:flex;
+border-top:1px solid #ccc;
+}
+.nav div{
+flex:1;
+text-align:center;
+padding:8px;
+font-size:12px;
 }
 .disclaimer{
-    font-size:12px;
-    color:red;
-    text-align:center;
+font-size:11px;
+color:red;
+text-align:center;
+margin:10px;
 }
 </style>
 </head>
 
 <body>
 
-<!-- PAGE 1 -->
-<div id="page1">
-<header>Free-Cash-With-Recharge-Earn</header>
-<div class="container">
+<!-- SCREEN 1 -->
+<div id="home">
+
+<div class="top">
+Free-Cash-With-Recharge-Earn
+<div class="sub">No investment no Diposit Earn Money Daily Free time.</div>
+</div>
+
+<div class="withdraw">
+Withdraw
+<div class="amount">₹517.32</div>
+
+<div class="tabs">
+<div class="tab">Paytm</div>
+<div class="tab">Bank</div>
+<div class="tab active" onclick="openRecharge()">Free Mobile Recharge</div>
+</div>
+</div>
+
 <div class="card">
-<p>No investment • No Deposit • Daily Free Time Earn</p>
+<p>आपका रिचार्ज 15 मिनट के भीतर कर दिया जाएगा।</p>
 <button onclick="openRecharge()">📱 Free Mobile Recharge</button>
 </div>
-</div>
+
 </div>
 
-<!-- PAGE 2 -->
-<div id="page2" class="hidden">
-<header>📱 Free Mobile Recharge</header>
-<div class="container">
+<!-- SCREEN 2 -->
+<div id="recharge" class="hidden">
+
+<div class="top">📱 Free Mobile Recharge</div>
 
 <div class="card">
-<input type="tel" placeholder="मोबाइल नंबर डालें" maxlength="10">
-<select>
-<option>Jio</option>
-</select>
+<input type="tel" placeholder="मोबाइल नंबर डालें" maxlength="10" style="width:100%;padding:10px">
+<p><b>Jio Recharge Plans</b></p>
 
-<select id="plan">
-<option value="">Recharge Plan चुनें</option>
-<option>₹19 – 1GB – 1 दिन</option>
-<option>₹29 – 2GB – 1 दिन</option>
-<option>₹149 – 1.5GB/Day – 24 दिन</option>
-<option>₹239 – 1.5GB/Day – 28 दिन</option>
-<option>₹299 – 2GB/Day – 28 दिन</option>
-</select>
+<div class="grid">
+<div>₹19<br>1GB</div>
+<div>₹11<br>Data</div>
+<div>₹199<br>1.5GB</div>
+<div>₹299<br>2GB</div>
+<div>₹399<br>2.5GB</div>
+<div>₹599<br>3GB</div>
+</div>
 
 <button onclick="doRecharge()">Recharge Now</button>
 </div>
 
 <div class="card">
-<b>🔴 Live Recharge Activity</b>
+<b>🔴 Live Recharge</b>
 <div id="live" class="live"></div>
 </div>
 
-<p class="disclaimer">
-⚠️ यह केवल DEMO वेबसाइट है।  
-कोई असली रिचार्ज नहीं किया जाता।
-</p>
-
-</div>
+<div class="disclaimer">
+⚠️ This is a demo website. No real recharge is provided.
 </div>
 
-<!-- SUCCESS -->
-<div id="success" class="hidden container">
+</div>
+
+<!-- SCREEN 3 -->
+<div id="success" class="hidden">
 <div class="card success">
-✅ Your recharge successfully completed  
-<br>⏳ Please wait 5 minutes...
+✅ Your Recharge Successfully Completed  
+<br>⏳ Please wait 5 minutes
 </div>
+</div>
+
+<!-- BOTTOM NAV -->
+<div class="nav">
+<div>Daily</div>
+<div>NEW</div>
+<div>Free Earn</div>
+<div>₹ Wallet</div>
+<div>Watch Videos</div>
 </div>
 
 <script>
 function openRecharge(){
-    document.getElementById("page1").classList.add("hidden");
-    document.getElementById("page2").classList.remove("hidden");
+home.classList.add("hidden");
+recharge.classList.remove("hidden");
 }
-
 function doRecharge(){
-    document.getElementById("page2").classList.add("hidden");
-    document.getElementById("success").classList.remove("hidden");
-    setTimeout(()=>{
-        alert("SMS: Your Recharge Successfully Completed");
-    },2000);
+recharge.classList.add("hidden");
+success.classList.remove("hidden");
+setTimeout(()=>{
+alert("SMS: Your Recharge Successfully Completed");
+},2000);
 }
 
-let numbers=[
-"98****3210 ₹149 सफल",
-"87****4456 ₹239 सफल",
-"76****9988 ₹19 सफल",
-"91****2234 ₹299 सफल"
+let list=[
+"98****3210 ₹299 Recharge Success",
+"87****4456 ₹199 Recharge Success",
+"76****8899 ₹19 Recharge Success",
+"91****2234 ₹599 Recharge Success"
 ];
 let i=0;
 setInterval(()=>{
-    document.getElementById("live").innerText = numbers[i];
-    i=(i+1)%numbers.length;
+document.getElementById("live").innerText=list[i];
+i=(i+1)%list.length;
 },2000);
 </script>
 
